updated dial page

--- a/PP1-Wag&Wander.html
+++ b/PP1-Wag&Wander.html
@@ -97,7 +97,7 @@
           <div class="project-row">
               <div class="project-title">
                <h1>Wag & Wander</h1>
-  <h2>Branding, Experiential, Social Media</h2>
+  <h2>Dog Enrichment Playgrounds</h2>
 
   <div class="collaborator-caption">
     <p>Student Work</p>
@@ -133,6 +133,25 @@
         />
       </figure>
     </li>
+
+      <li>
+        <div class="project-description-block">
+         <div class="project-description-content">
+           <div class="project-description-heading">
+  <h3>IN A NUTSHELL</h3>
+  </div>
+            <div class="project-description-body">
+              <p>
+                <strong>Audience:</strong> North Vancouver dog owners aged 25-65 with keen canines. They want to care for their dogs deeply but often lack the time, knowledge, or resources to meet their pets’ physical and mental needs.
+                <p>
+                <strong>USP:</strong> Wag & Wander installs “Dog Enrichment Playgrounds” along local trails featuring insightful equipment that supports canine well-being through intentional play and encourages positive trail etiquette. The brand empowers owners with accessible tools and uses mascots Trek and Scout, the Pup Park Rangers, to share enrichment tips and pup-perspective advice on social media, making canine care resources engaging and shame-free.
+                <p>
+                <strong>Deliverables and goals:</strong> Develop a vibrant, accessible brand identity that feels cohesive across on-trail experiences and digital touchpoints. Featuring a playful, intuitive signage system for parks, along with engaging social media content that uniquely promotes canine wellness, empowers dog owners, and shares relevant park updates.
+              </p>
+            </div>
+          </div>
+        </div>
+      </li>
 
     <li class="project-page-grid-item">
       <figure>
