--- a/PP2-Dial.html
+++ b/PP2-Dial.html
@@ -97,7 +97,7 @@
           <div class="project-row">
             <div class="project-title">
               <h1>Dial</h1>
-              <h2>Branding, Editorial, Social Media</h2>
+              <h2>Music Discovery Platform Amplifying Gender Equity</h2>
                        <div class="collaborator-caption">
       <p>
      Student Work
@@ -122,7 +122,7 @@
         <!--Work from original work page-->
         <section class="portfolio">
           <ul class="project-grid">
-            <li class="project-page-grid-item">
+            <li class="project-page-grid-item-dark">
                 <figure>
         <video
           autoplay
@@ -138,14 +138,104 @@
       </figure> 
             </li>
 
-             <li class="project-page-grid-item-dial">
+            <li>
+        <div class="project-description-block">
+         <div class="project-description-content">
+           <div class="project-description-heading">
+  <h3>IN A NUTSHELL</h3>
+  </div>
+            <div class="project-description-body">
+              <p>
+                <strong>Audience:</strong> Music lovers aged 18–30 who crave a more personal music discovery experience. Their listening habits are largely shaped by the convenience of streaming platforms, which often favour trending artists and mainstream scenes. They are a passionate and value authenticity and inclusivity, however this isn’t always reflected in their playlists. 
+                <p>
+                <strong>USP:</strong> DIAL is a bold, human-centered music discovery platform that amplifies women and gender-diverse artists across print, audio, and social media. It offers a curated, tactile alternative to algorithm-driven discovery, championing gender equity and underrepresented talent from all corners of the music industry. Inspired by Swiss music posters, DIAL’s visual language is striking yet grounded, evoking the spirit of analog discovery while remaining accessible and contemporary.<p>
+                <strong>Deliverables and goals:</strong> Build a cohesive visual identity across print and digital, including the magazine, podcast, and social media. Design flexible layouts and brand assets that support DIAL’s mission: to connect audiences with underrepresented artists in a way that feels fresh, tactile, and intentional.
+              </p>
+            </div>
+          </div>
+        </div>
+      
+             <li class="project-page-grid-item-dark">
               <figure>
                 <img
                   src="assets/dial/lauren-howard-dial-brand-guide.jpg"
-                  alt="Tips and tricks for dog owners from Scout and Trek."
+                  alt="Dial's look and feel."
                 />
               </figure>
             </li>
+
+               <li class="project-page-grid-item-dark">
+                <figure>
+        <video
+          autoplay
+          loop
+          muted
+          playsinline
+          class="your-video-class"
+        >
+          <source src="assets/dial/dial_covers.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
+        <figcaption> </figcaption>
+      </figure> 
+            </li>
+
+               <li class="project-page-grid-item-dark">
+                <figure>
+        <video
+          autoplay
+          loop
+          muted
+          playsinline
+          class="your-video-class"
+        >
+          <source src="assets/dial/dial-vinyl-spreads.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
+        <figcaption> </figcaption>
+      </figure> 
+            </li>
+
+              <li class="project-page-grid-item">
+              <figure>
+                <img
+                  src="assets/dial/lauren-howard-dial-vinyl-issue-playlist.jpg"
+                  alt="Dial's Vinyl Issue playlist."
+                />
+              </figure>
+            </li>
+
+                <li class="project-page-grid-item-dark">
+      <figure>
+        <img
+          src="assets/dial/lauren-howard-graphic-design-dial-session-podcast-design.gif"
+          alt="Wag & Wander's Pup Playground park equipment signage"
+        />
+      </figure>
+    </li>
+
+<div class="project-grid-pair">
+  <li class="project-page-grid-item-pair-dark">
+    <figure>
+      <img src="assets/dial/lauren-howard-graphic-design-dial-social-media-profile.jpg" alt="Dial's social media profile." />
+    </figure>
+  </li>
+
+  <li class="project-page-grid-item-pair-dark">
+    <figure>
+      <img src="assets/dial/lauren-howard-graphic-design-dial-social-media-feed.jpg" alt="Dial's social media feed." />
+    </figure>
+  </li>
+</div>
+
+ <li class="project-page-grid-item">
+      <figure>
+        <img
+          src="assets/dial/lauren-howard-graphci-design-dial-social-media-posts.gif"
+          alt="Dial's weekly social media posts."
+        />
+      </figure>
+    </li>
 
           </ul>
 
