--- a/PP3-FieldFable.html
+++ b/PP3-FieldFable.html
@@ -97,7 +97,7 @@
           <div class="project-row">
             <div class="project-title">
               <h1>Field Fable</h1>
-              <h2>Branding, Packaging, Illustration</h2>
+              <h2>Enchanting Craft Brewery</h2>
                     <div class="collaborator-caption">
       <p>
      Student Work
@@ -129,6 +129,26 @@
                 />
               </figure>
             </li>
+
+                     <li>
+        <div class="project-description-block">
+         <div class="project-description-content">
+           <div class="project-description-heading">
+  <h3>IN A NUTSHELL</h3>
+  </div>
+            <div class="project-description-body">
+              <p>
+                <strong>Audience:</strong> Environmentally conscious craft beer lovers aged 19–35—ranging from curious newcomers to seasoned enthusiasts—who seek the thrill of discovering unique flavours.
+                <p>
+                <strong>USP:</strong> Field Fable brews celebrate the Pacific Northwest with distinctive flavour profiles crafted from its Indigenous ingredients. Blending approachability with artistry, the brand invites beer drinkers to explore unique tastes while appreciating the region’s native wildlife.
+                <p>
+                <strong>Deliverables and goals:</strong> Develop a story-driven brand identity rooted in Pacific Northwest ingredients. Design ale packaging that showcases each brew’s unique flavour through classic fable-inspired illustrations. Create cohesive brand applications that expand the visual identity.
+              </p>
+            </div>
+          </div>
+        </div>
+      </li>
+
             <li class="project-page-grid-item">
               <figure>
                 <img
@@ -146,15 +166,22 @@
               </figure>
             </li>
 
-             <li class="project-page-grid-item">
-              <figure>
-                <img
-                  src="assets/field-fable/pale-ale-animation.gif"
-                  alt="Field Fable pale ale packaging label."
-                />
-              </figure>
+                 <li class="project-page-grid-item">
+                <figure>
+        <video
+          autoplay
+          loop
+          muted
+          playsinline
+          class="your-video-class"
+        >
+          <source src="assets/field-fable/field-fable-label-animation.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
+        <figcaption> </figcaption>
+      </figure> 
             </li>
-      
+
             <li class="project-page-grid-item">
               <figure>
                 <img
