--- a/PP4-Thicket.html
+++ b/PP4-Thicket.html
@@ -97,7 +97,7 @@
           <div class="project-row">
             <div class="project-title">
                <h1>Thicket Co.</h1>
-  <h2>Art Direction, Packaging, Illustration, Editorial</h2>
+  <h2>Low-Impact Camping Gear Company</h2>
 
   <div class="collaborator-caption">
     <p>Student Work</p>
