--- a/PP5-Stella.html
+++ b/PP5-Stella.html
@@ -97,7 +97,7 @@
           <div class="project-row">
             <div class="project-title">
               <h1>Stella</h1>
-              <h2>Branding, Album Design, Merchandise</h2>
+              <h2>Debut Album Rollout</h2>
                 <p>Student Work</p>
                
                 <div class="collaborator-caption">
