--- a/PP6-Sunbud.html
+++ b/PP6-Sunbud.html
@@ -97,7 +97,7 @@
           <div class="project-row">
             <div class="project-title">
               <h1>SunBud</h1>
-              <h2>Branding, Interactive, Character Design</h2>
+              <h2>Sun Protection App</h2>
 
                 <div class="collaborator-caption">
     <p>Student Work</p>
@@ -130,6 +130,25 @@
                 />
               </figure>
             </li>
+
+                 <li>
+        <div class="project-description-block">
+         <div class="project-description-content">
+           <div class="project-description-heading">
+  <h3>IN A NUTSHELL</h3>
+  </div>
+            <div class="project-description-body">
+              <p>
+                <strong>Audience:</strong> Millennial and Gen Z young adults in North America who often skip sun protection due to forgetfulness, inconvenience, or a perception that it’s uncool. They value playful, nostalgic, and relatable content that fits seamlessly into their daily routines.
+                <p>
+                <strong>USP:</strong> SunBud transforms sun safety into a fun, engaging experience by personifying the ’90s aesthetic into sunny, friendly “buds.” These characters combine nostalgia with practical reminders, making sunscreen use feel approachable, memorable, and habit-forming.
+                <p>
+                <strong>Deliverables and goals:</strong> Design a user-friendly app interface and lovable character mascots that educate users about sun safety, send playful reminders, and encourage consistent sunscreen use. 
+              </p>
+            </div>
+          </div>
+        </div>
+      </li>
 
               <li class="project-page-grid-item">
               <figure>
