--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <div class="overlay">
                   <h1 class="overlay-title">Stella</h1>
                   <h3 class="overlay-description">
-                    Fictional Artist's Album Rollout
+                    Debut Album Rollout
                   </h3>
                   <p class="overlay-description">2023</p>
                   <ul class="project-category-list">
@@ -218,7 +218,7 @@
                 <div class="overlay">
                   <h1 class="overlay-title">SunBud</h1>
                   <h3 class="overlay-description">
-                    Playful Sun Protection App
+                    Sun Protection App
                   </h3>
                   <p class="overlay-description">2023</p>
                   <ul class="project-category-list">
