--- a/PP1-Wag&Wander.html
+++ b/PP1-Wag&Wander.html
@@ -189,14 +189,19 @@
       </figure>
     </li>
 
-    <li class="project-page-grid-item">
-      <figure>
-        <img
-          src="assets/wag-and-wander/lauren-howard-design-wag-and-wander-merchandise-leash-frisbee.jpg"
-          alt="Tips and tricks for dog owners from Scout and Trek."
-        />
-      </figure>
-    </li>
+ <div class="project-grid-pair">
+  <li class="project-page-grid-item-pair">
+    <figure>
+      <img src="assets/wag-and-wander/lauren-howard-design-bandana-foulard-flat-mockup.jpg" alt="Wag and Wander branded bandana and frisbee." />
+    </figure>
+  </li>
+
+  <li class="project-page-grid-item-pair">
+    <figure>
+      <img src="assets/wag-and-wander/lauren-howard-wag-and-wonder-leash.jpg" alt="Wag and Wander merchandise, leash." />
+    </figure>
+  </li>
+</div>
 
     <li class="project-page-grid-item">
       <figure>
