--- a/illustration.html
+++ b/illustration.html
@@ -90,7 +90,7 @@
         </ul>
       </aside>
 
-      <!--Work-->
+      <!--Illustration Work-->
 
       <main class="work-wrapper">
         <section class="portfolio">
@@ -110,8 +110,27 @@
                 <div class="overlay">
                   <h1 class="overlay-title">Phoebe</h1>
                   <h3 class="overlay-description">
-                    Featured in the Capilano Courier
+                    Personal work featured in the Capilano Courier October 2023 issue.
                   </h3>
+                </div>
+              </figure>
+            </li>
+
+             <!--[Unlucky]-->
+
+            <li class="work-page-grid-item">
+              <figure>
+                <img
+                  src="assets/illustrations/lauren-howard-illustration-unlucky-cover.jpg"
+                  width="1275"
+                  height="1275"
+                  alt="Unlucky rabbit illustration I did for fun"
+                />
+              </figure>
+              <figure>
+                <div class="overlay">
+                  <h1 class="overlay-title">Unlucky</h1>
+                  <h3 class="overlay-description">Personal work chosen for the Liar 2025 issue cover.</h3>
                 </div>
               </figure>
             </li>
@@ -137,7 +156,50 @@
               </figure>
             </li>
 
-            <!--[Shoes]-->
+            <!--[Courier Cover]-->
+
+            <li class="work-page-grid-item">
+              <figure>
+                <img
+                  src="assets/illustrations/lauren-howard-cover-capilano-courier-statue-cover.jpg"
+                  width="1275"
+                  height="1275"
+                  alt="Housing crisis themed spot illustration for the Capilano Courier."
+                />
+              </figure>
+              <figure>
+                <div class="overlay">
+                  <h1 class="overlay-title">Untitled</h1>
+                  <h3 class="overlay-description">
+                    Cover artwork for the Capilano Courier April 2022 issue. 
+                  </h3>
+                </div>
+              </figure>
+            </li>
+
+
+            <!--[Housing Crisis Series 2]-->
+
+            <li class="work-page-grid-item">
+              <figure>
+                <img
+                  src="assets/illustrations/lauren-howard-illustration-housing-crisis-spot-cover.gif"
+                  width="1275"
+                  height="1275"
+                  alt="Housing crisis themed spot illustration for the Capilano Courier."
+                />
+              </figure>
+              <figure>
+                <div class="overlay">
+                  <h1 class="overlay-title">Housing Crisis Series</h1>
+                  <h3 class="overlay-description">
+                    Spot illustrations for the Capilano Courier October 2024 issue.
+                  </h3>
+                </div>
+              </figure>
+            </li>
+
+              <!--[Shoes]-->
 
             <li class="work-page-grid-item">
               <figure>
@@ -151,111 +213,12 @@
               <figure>
                 <div class="overlay">
                   <h1 class="overlay-title">Shoes</h1>
-                  <h3 class="overlay-description">Featured in SAPP Zine</h3>
+                  <h3 class="overlay-description">Personal work featured in SAPP Zine 2024</h3>
                 </div>
               </figure>
             </li>
 
-            <!--[Unlucky]-->
 
-            <li class="work-page-grid-item">
-              <figure>
-                <img
-                  src="assets/illustrations/lauren-howard-illustration-unlucky-rabbit.jpg"
-                  width="1275"
-                  height="1275"
-                  alt="Unlucky rabbit illustration I did for fun"
-                />
-              </figure>
-              <figure>
-                <div class="overlay">
-                  <h1 class="overlay-title">Unlucky</h1>
-                  <h3 class="overlay-description">Personal Work</h3>
-                </div>
-              </figure>
-            </li>
-
-            <!--[Housing Crisis Series 1]-->
-
-            <li class="work-page-grid-item">
-              <figure>
-                <img
-                  src="assets/illustrations/lauren-howard-illustration-editorial-spot-capilano-courier-housing-crisis-renting.jpg"
-                  width="1275"
-                  height="1275"
-                  alt="Housing crisis themed spot illustration for the Capilano Courier."
-                />
-              </figure>
-              <figure>
-                <div class="overlay">
-                  <h1 class="overlay-title">Housing Crisis 1</h1>
-                  <h3 class="overlay-description">
-                    Featured in the Capilano Courier
-                  </h3>
-                </div>
-              </figure>
-            </li>
-
-            <!--[Housing Crisis Series 2]-->
-
-            <li class="work-page-grid-item">
-              <figure>
-                <img
-                  src="assets/illustrations/lauren-howard-illustration-editorial-spot-capilano-courier-housing-crisis-key.jpg"
-                  width="1275"
-                  height="1275"
-                  alt="Housing crisis themed spot illustration for the Capilano Courier."
-                />
-              </figure>
-              <figure>
-                <div class="overlay">
-                  <h1 class="overlay-title">Housing Crisis 2</h1>
-                  <h3 class="overlay-description">
-                    Featured in the Capilano Courier
-                  </h3>
-                </div>
-              </figure>
-            </li>
-
-            <!--[Illustration Title]-->
-
-            <li class="work-page-grid-item">
-              <figure>
-                <img
-                  src="assets/illustrations/lauren-howard-illustration-retro-futurism-the-liar.jpg"
-                  width="1275"
-                  height="1275"
-                  alt="Inspired by retro-futurism and Hijime Sorayama, exploring past and future."
-                />
-              </figure>
-              <figure>
-                <div class="overlay">
-                  <h1 class="overlay-title">Untitled</h1>
-                  <h3 class="overlay-description">Featured in the Liar</h3>
-                </div>
-              </figure>
-            </li>
-
-            <!--[Illustration Title]-->
-
-            <li class="work-page-grid-item">
-              <figure>
-                <img
-                  src="assets/illustrations/lauren-howard-illustration-editorial-cover-capilano-courier-statue-park-covid19.jpg"
-                  width="1275"
-                  height="1275"
-                  alt="Cover illustration for the Capilano Courier about how environmentalism during Covid19"
-                />
-              </figure>
-              <figure>
-                <div class="overlay">
-                  <h1 class="overlay-title">Untitled</h1>
-                  <h3 class="overlay-description">
-                    Cover for the Capilano Courier
-                  </h3>
-                </div>
-              </figure>
-            </li>
           </ul>
         </section>
       </main>
