--- a/about.html
+++ b/about.html
@@ -158,24 +158,25 @@
         <ul>
           <li>
             <p>
-              Practicum Designer | Thought Shop<br/>
+              Freelance — Designer & Illustrator<br/>
+              <h5>September 2023 - Present</h5>
+            </p>
+          </li>
+          <br/>
+          <li>
+            <p>
+              Thought Shop Creative — Practicum Designer<br/>
               <h5>February 2025 - April 2025</h5>
             </p>
           </li>
           <br/>
           <li>
             <p>
-              Illustration Contributor | Capilano Courier<br />
+              Capilano Courier - Illustration Contributor<br />
               <h5>September 2021 - April 2025</h5>
             </p>
           </li>
           <br/>
-          <li>
-            <p>
-              Digital Studio Clerk | Burnaby Public Library<br />
-              <h5>March 2024 - Present</h5>
-            </p>
-          </li>
         </ul>
       </div>
 
